# nepal-election-2082

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: nepal_election_2082_dashboard.py
app/public/data/: election.parquet
data/processed/: election.json
data/raw/: election_raw_20260204_151315.txt
docs/: index.html
notebooks/: notebook.py
src/: fetch.py  models.py  parse.py  pipeline.py  store.py  validate.py
