[project]
description = "A starter template for marimo notebooks with uv"
name = "marimo-template"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "ruff>=0.15.0",
  "marimo>=0.19.7",
]

[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["tests", "marimo_template"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.package_management]
manager = "uv"

[tool.marimo.runtime]
pythonpath = ["./src"]
